# VI-2526-Classes

./: .gitignore  CMakeLists.txt  README.md  justfile
src/: main.cpp  vi_pch.h
src/Camera/: Camera.cpp  Camera.hpp
src/Image/: FileImages.cpp  FileImages.hpp  Image.hpp  ImagePPM.cpp  ImagePPM.hpp
src/Light/: Light.hpp
src/Log/: Log.hpp
src/Math/: DiscreteDistribution.cpp  DiscreteDistribution.hpp  Math.cpp  Math.hpp  RGB.hpp  Random.cpp  Random.hpp  Vector.hpp
src/Primitive/: BRDF.cpp  BRDF.hpp  BoundingBox.hpp  Material.hpp  Primitive.hpp
src/Primitive/AccelerationStructures/: AccelerationStructure.hpp  GridAccelerationStructure.cpp  GridAccelerationStructure.hpp
src/Primitive/Geometry/: Geometry.cpp  Geometry.hpp  Mesh.cpp  Mesh.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
src/Ray/: Intersection.hpp  Ray.hpp
src/Renderer/: DummyRenderer.cpp  DummyRenderer.hpp  Renderer.cpp  Renderer.hpp
src/Scene/: Scene.cpp  Scene.hpp  SceneBuilder.cpp  SceneBuilder.hpp
src/Shaders/: AmbientShader.cpp  AmbientShader.hpp  DirectIllumination.cpp  DirectIllumination.hpp  DummyShader.hpp  PathTracingShader.cpp  PathTracingShader.hpp  Shader.hpp  VeachShader.cpp  VeachShader.hpp  WhittedShader.cpp  WhittedShader.hpp
src/Utils/: ProgressBar.cpp  ProgressBar.hpp  ThreadPool.cpp  ThreadPool.hpp  Util.hpp
